--- a/ComunidadSostenible/index.html
+++ b/ComunidadSostenible/index.html
@@ -18,10 +18,15 @@
 					<nav>
 						<ul class="text-center">
 							<li>Nosotros</li>
+							<li>|</li>
 							<li>Servicios</li>
-							<li>Proyectos</li>							
-							<li>Equipos</li>							
-							<li>Blogs</li>							
+							<li>|</li>
+							<li>Proyectos</li>
+							<li>|</li>							
+							<li>Equipos</li>
+							<li>|</li>							
+							<li>Blogs</li>
+							<li>|</li>							
 							<li>Síguenos</li>
 						</ul>
 					</nav>
@@ -67,7 +72,7 @@
 			</div><!-- Termina sección METODOLOGÍA-->
 		</section><!--1-->
 		<section><!--2-->
-			
+			<div class="container">
 				<div class="row text-center"><!-- Inicia sección SERVICIOS-->
 					<div class="col-12 text-center pd-5">
 						<h2>Servicios</h2>
@@ -82,56 +87,56 @@
 				<div class="row text-center">
 					<div class="col-4">
 						<img src="img/iconos/servicios-icon/educacion.png" alt="Educación" class="seislogos">
-						<h3>Educación para<br>el Desarrollo Sostenible</h3>
+						<h3 class="mbottom">Educación para<br>el Desarrollo Sostenible</h3>
 						<p class="text-black">Lorem ipsum dolor sit amet, consectetur adipiscing elt. Nisi nihil neque al
-						cumque. Deserunt inventore maiores aliquam audantium, porro.</p>
+						cumque maiores aliquam audantium, porro.</p>
 					</div>	
 					<div class="col-4">
 						<img src="img/iconos/servicios-icon/mitigacion.png" alt="Mitigación" class="seislogos">
-						<h3>Mitigación<br>Cambio Climático</h3>
+						<h3 class="mbottom">Mitigación<br>Cambio Climático</h3>
 						<p class="text-black">Lorem ipsum dolor sit amet, consectetur adipiscing elt. Nisi nihil neque al
-						cumque. Deserunt inventore maiores aliquam audantium, porro.</p>
+						cumque maiores aliquam audantium, porro.</p>
 					</div>
 					<div class="col-4">
 						<img src="img/iconos/servicios-icon/bienestar.png" alt="Bienestar" class="seislogos">
-						<h3>Bienestar<br>Ocupacional</h3>
+						<h3 class="mbottom">Bienestar<br>Ocupacional</h3>
 						<p class="text-black">Lorem ipsum dolor sit amet, consectetur adipiscing elt. Nisi nihil neque al
-						cumque. Deserunt inventore maiores aliquam audantium, porro.</p>
+						cumque maiores aliquam audantium, porro.</p>
 					</div>
 				</div>
-				<div class="row text-center pt-5 pb-5">
+				<div class="row text-center pt-5 pb-5 mtop">
 					<div class="col-4">
 						<img src="img/iconos/servicios-icon/seguridad-icon.png" alt="Seguridad" class="seislogos">
-						<h3>Consultorías en Seguridad Industrial y Medio Ambiente</h3>
+						<h3 class="mbottom">Consultorías en Seguridad Industrial y Medio Ambiente</h3>
 						<p class="text-black">Lorem ipsum dolor sit amet, consectetur adipiscing elt. Nisi nihil neque al
-						cumque. Deserunt inventore maiores aliquam audantium, porro.</p>
+						cumque maiores aliquam audantium, porro.</p>
 					</div>
 					<div class="col-4">
 						<img src="img/iconos/servicios-icon/manejo-de-agua.png" alt="Manejo de aguas" class="seislogos">
-						<h3>Manejo de<br>Aguas</h3>
+						<h3 class="mbottom">Manejo de<br>Aguas</h3>
 						<p class="text-black">Lorem ipsum dolor sit amet, consectetur adipiscing elt. Nisi nihil neque al
-						cumque. Deserunt inventore maiores aliquam audantium, porro.</p>
+						cumque maiores aliquam audantium, porro.</p>
 					</div>
 					<div class="col-4">
 						<img src="img/iconos/servicios-icon/agricultura-icon.png" alt="Agricultura" class="seislogos">
-						<h3>Agricultura</h3>
+						<h3 class="mbottom">Agricultura</h3>
 						<p class="text-black">Lorem ipsum dolor sit amet, consectetur adipiscing elt. Nisi nihil neque al
-						cumque. Deserunt inventore maiores aliquam audantium, porro.</p>
+						cumque maiores aliquam audantium, porro.</p>
 					</div>
 				</div><!-- Termina sección SERVICIOS-->
-			
+			</div>
 		</section><!--2-->
 		<section><!--3-->
 			<div class="row"><!-- Inicia Sección PROYECTOS-->
-				<div class="col-12 bg-green pt-5 pb-5">
-					<h3 class="text-white">Proyectos</h3><!--Parte 1-->
+				<div class="col-12 bg-green pd-5-10">
+					<h3 class="text-white text-center mbottom">Proyectos</h3><!--Parte 1-->
 					<div class="row">
 						<div class="col-6 proyectos">
 							<img src="img/fotos/img-0352.jpg" alt="3niñas" class="fotosfondoverde">
 						</div>						
 						<div class="col-6 pt-5 text-center text-white">
 							<h4>Nombre del Proyecto 1</h4>
-							<h5>Nombre de Distrito</h5>
+							<h5 class="mbottom">Nombre de Distrito</h5>
 							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 							tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -145,7 +150,7 @@
 						</div>
 						<div class="col-6 pt-5 text-center text-white">
 							<h4>Nombre del Proyecto 2</h4>
-							<h5>Nombre de Distrito</h5>
+							<h5 class="mbottom">Nombre de Distrito</h5>
 							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 							tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -157,73 +162,66 @@
 		</section><!--3-->
 		<section class="pb-5 pt-5"><!--Inicia 4 Equipo-->
 			<div class="row">
-				<div class="col-12">
+				<div class="col-12 text-center">
 					<h2>Equipo</h2>
 				</div>
 			</div>
 			<div class="row text-center">
 				<div class="col-6"><!-- Inicia Parte 1-->
 					<img src="img/fotos/equipo2.jpg" alt="Equipo2" class="bola">
-					<h6>Camila Basurco</h6>
+					<h4>Camila Basurco</h4>
 					<p>Cargo desempeñado</p>
-					<p class="pb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-					consequat.</p>
+					<p class="pd-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit,<br>magna aliqua. Ut enim ad minim veniam,
+					quis nostrud<br>sed do eiusmod
+					tempor incididunt et dolore.</p>
 					<img src="img/iconos/redes-sociales/twitter.png" alt="Twitter" class="iconochico">
 					<img src="img/iconos/redes-sociales/in.png" alt="In" class="iconochico">
 					<img src="img/iconos/redes-sociales/mensaje.png" alt="Mensaje" class="iconochico">
 				</div><!-- Termina Parte 1-->
 				<div class="col-6"><!-- Inicia Parte 2-->
 					<img src="img/fotos/equipo3.jpg" alt="Equipo3" class="bola">
-					<h6>Gabriela Bertocci</h6>
+					<h4>Gabriela Bertocci</h4>
 					<p>Cargo desempeñado</p>
-					<p class="pb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-					consequat.</p>
+					<p class="pd-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit,<br>magna aliqua. Ut enim ad minim veniam,
+					quis nostrud<br>sed do eiusmod
+					tempor incididunt et dolore.</p>
 					<img src="img/iconos/redes-sociales/twitter.png" alt="Twitter" class="iconochico">
 					<img src="img/iconos/redes-sociales/in.png" alt="In" class="iconochico">
 					<img src="img/iconos/redes-sociales/mensaje.png" alt="Mensaje" class="iconochico">
 				</div><!-- Termina Parte 2-->
 			</div>
 		</section><!--Termina 4 Equipo-->
-		<section ><!--Termina 5 Blog-->
-			<div class="row fondogristextura">
+		<section class="fondogristextura"><!--Termina 5 Blog-->
+			<div class="row">
+				<div class="col-12 text-black">
+					<div class="row mbottom">
+						<div class="col-12 text-center">
+							<h2>Blog</h2>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="row">
 				<div class="col-1 slidertopbottom">
 					<img src="img/iconos/slider/ecomunidad-15.png" alt="SliderAtrás">
 				</div>
-				<div class="col-3 text-black">
-					<div class="row">
-						<div class="col-12">
-							<h2>Blog</h2>
-						</div>
-					</div>	
-					<img src="img/fotos/img-0400.jpg" alt="Grupal" class="fotosfondogristextura text-left">
-					<h4 class="text-left">Título del Post</h4>
-					<h5 class="text-left">01.Ene.2015</h5>
-					<p class="text-left">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-					consequat.</p>
+				<div class="col-3 text-black text-center">					
+					<img src="img/fotos/img-0400.jpg" alt="Grupal" class="fotosfondogristextura">
+					<h4>Título del Post 3</h4>
+					<h5>30.Dic.2014</h5>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore magna aliqua.</p>
 				</div>
-				<div class="col-4 text-black">
-					<img src="img/fotos/img-9246.jpg" alt="Tren" class="fotosfondogristextura text-center" id="fotomedio">
-					<h4 class="text-left">Título del Post 3</h4>
-					<h5 class="text-left">30.Dic.2014</h5>
-					<p class="text-left">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-					consequat.</p>
+				<div class="col-4 text-black text-center">
+					<img src="img/fotos/img-9246.jpg" alt="Tren" class="fotosfondogristextura text-left" id="fotomedio">
+					<h4>Título del Post 3</h4>
+					<h5>30.Dic.2014</h5>
+					<p>Lorem ipsum dolor sit amet, consectetur<br>adipisicing elit, sed do eiusmod tempor<br>incididunt ut labore magna aliqua.</p>
 				</div>
-				<div class="col-3 text-left text-black">					
-					<img src="img/fotos/img-0400.jpg" alt="Grupal" class="fotosfondogristextura text-right">
-					<h4 class="text-left">Título del Post 3</h4>
-					<h5 class="text-left">30.Dic.2014</h5>
-					<p class="text-left">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-					consequat.</p>
+				<div class="col-3 text-black text-center">					
+					<img src="img/fotos/img-0400.jpg" alt="Grupal" class="fotosfondogristextura">
+					<h4>Título del Post 3</h4>
+					<h5>30.Dic.2014</h5>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore magna aliqua.</p>
 				</div>
 				<div class="col-1 slidertopbottom">
 					<img src="img/iconos/slider/ecomunidad-16.png" alt="SliderAdelante">
@@ -231,30 +229,30 @@
 			</div>
 		</section><!--Termina 5 Blog-->
 		<footer class="bg-gray"><!--Inicia FOOTER-->
-			<div class="row fondogris text-white">
-				<div class="col-3">
-					<p>Facebook</p>
-					<img src="img/facebook.png" alt="Facebook" class="inconofooter">
+			<div class="row fondogris text-white pd-5">
+				<div class="col-3 caja">
+					<p class="mtop">Facebook</p>
+					<div class="cajaicono"><img src="img/facebook.png" alt="Facebook" class="iconofooter"></div>
 				</div>
-				<div class="col-3">
-					<p>Twitter</p>
-					<img src="img/twitter.png" alt="Twitter" class="inconofooter">
+				<div class="col-3 caja">
+					<p class="mtop">Twitter</p>
+					<div class="cajaicono"><img src="img/twitter.png" alt="Twitter" class="iconofooter"></div>
 				</div>
-				<div class="col-3">
-					<p>Likedin</p>
-					<img src="img/in.png" alt="Likedin" class="inconofooter">
+				<div class="col-3 caja">
+					<p class="mtop">Likedin</p>
+					<div class="cajaicono"><img src="img/in.png" alt="Likedin" class="iconofooter"></div>
 				</div>
-				<div class="col-3">
-					<p>E-Mail</p>
-					<img src="img/email.png" alt="E-Mail" class="inconofooter">
+				<div class="col-3 caja">
+					<p class="mtop">E-Mail</p>
+					<div class="cajaicono"><img src="img/email.png" alt="E-Mail" id="mail"></div>
 				</div>
 			</div>
-			<div class="row medida">
+			<div class="row medida pd-5">
 				<div class="col-6">
 					<p class="text-black">Proyecto desarrollado por</p>
 					<p class="text-yellow">Laboratoria</p>
 				</div>
-				<div class="col-6 text-black">
+				<div class="col-6 text-black text-right">
 					<p>Ecomunidad Sostenible<br>hola@econmunidad.com.pe<br>51 998 887 776</p>
 				</div>
 			</div>
