--- a/ComunidadSostenible/index.html
+++ b/ComunidadSostenible/index.html
@@ -59,7 +59,7 @@
 			</div><!-- Termina sección MISIÓN VISION-->
 			<div class="row"><!-- Inicia sección METODOLOGÍA-->
 				<div class="col-6 pd-0 text-center">
-					<img src="img/metodo.jpg" alt="FotoMetodología" class="imgmeto text-center">
+					<img src="img/metodo.JPG" alt="FotoMetodología" class="imgmeto text-center">
 				</div> 
 				<div class="col-6 fondoverde mg-0 text-center">					
 					<img src="img/iconos/metodologia-icon.png" alt="ÍconoMetodología" class="logoymeto">
