--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                         </div>
                     </div>
                     <div class="row text-center">
-                        <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 skills">
+                        <div class="col-lg-2 col-md-2 col-sm-4 col-xs-6 skills">
                             <h4>html5 <small>intermedio</small></h4>
                             <!-- <div class="progress">
                                 <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:70%">
@@ -84,7 +84,7 @@
                                 <a><img src="images/coding.png" alt="imagen de código html" class="img-responsive center-block"></a>
                             </div>
                         </div>
-                        <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 skills">
+                        <div class="col-lg-2 col-md-2 col-sm-4 col-xs-6 skills">
                             <h4>css3 <small>intermedio</small></h4>
                             <!-- <div class="progress">
                                 <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:70%">
@@ -94,7 +94,7 @@
                                 <a><img src="images/graphic-design.png" alt="imagen de diseño y estilos en css" class="img-responsive center-block"></a>
                             </div>
                         </div>
-                        <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 skills">
+                        <div class="col-lg-2 col-md-2 col-sm-4 col-xs-6 skills">
                             <h4>bootstrap3 <small>intermedio</small></h4>
                             <!-- <div class="progress">
                                 <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width:50%">
@@ -104,7 +104,19 @@
                                 <a><img src="images/web-design.png" alt="imagen adaptabilidad en dispositivos" class="img-responsive center-block"></a>
                             </div>    
                         </div>
-                        <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 skills">
+                    <!-- </div> -->
+                    <!-- <div class="row text-center"> -->
+                        <div class="col-lg-2 col-md-2 col-sm-4 col-xs-6 skills">
+                            <h4>jquery <small>intermedio</small></h4>
+                            <!-- <div class="progress">
+                                <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:70%">
+                                </div>
+                            </div> -->
+                            <div class="cajaimg">
+                                <a><img src="images/jquery.png" alt="imagen de estructura con jquery" class="img-responsive center-block"></a>
+                            </div>
+                        </div>
+                        <div class="col-lg-2 col-md-2 col-sm-4 col-xs-6 skills">
                             <h4>javaScript <small>básico</small></h4>
                             <!-- <div class="progress">
                                 <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100" style="width:30%">
@@ -114,7 +126,33 @@
                                 <a><img src="images/cube.png" alt="imagen animada de formaciones con varios cubos" class="img-responsive center-block"></a>
                             </div>   
                         </div>
+                        <div class="col-lg-2 col-md-2 col-sm-4 col-xs-6 skills">
+                            <h4>github <small>básico</small></h4>
+                            <!-- <div class="progress">
+                                <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width:50%">
+                                </div>
+                            </div> -->
+                            <div class="cajaimg">
+                                <a><img src="images/githb.png" alt="imagen administrador de archivos" class="img-responsive center-block"></a>
+                            </div>    
+                        </div>
                     </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
                     <div class="row">
                         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                             <button type="button" class="btn btn-default center-block" id="cv">
@@ -139,17 +177,34 @@
                         <div class="row">
                             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">   
                                 <div id="comunidad" class="proyectos">
-                                    <a href="ComunidadSostenible/index.html" target="_blank" data-toggle="tooltip" title="Abrir proyecto">
-                                        <img src="images/comunidadSostenible.png" alt="imagen del proyecto titulado Cinema" class="imgproyec img-responsive">
+                                    <a href="ComunidadSostenible/index.html" target="_blank" data-toggle="tooltip" title="Uno de mis  primeros proyectos usando el sistema de grillas. Click para abrir.">
+                                        <img src="images/comunidadSostenible.png" alt="imagen del proyecto titulado comunidadSostenible" class="imgproyec img-responsive">
                                     </a>
                                 </div>
+                            </div>    
+                        </div>    
+                        <div class="row mtop5">
+                            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                                 <div id="kane" class="proyectos mtop3">
-                                    <a href="KaneTheme/index.html" target="_blank" data-toggle="tooltip" title="Abrir proyecto">
+                                    <a href="KaneTheme/index.html" target="_blank" data-toggle="tooltip" title="Proyecto elaborado con Bootstrap. Click para abrir.">
                                         <img src="images/kane.png" alt="imagen del proyecto titulado kane" class="imgproyec img-responsive">
                                     </a>
                                 </div>
+                            </div>
+                        </div>
+                        <div class="row mtop5">
+                            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                                <div id="biciando" class="proyectos mtop3">
+                                    <a href="Biciando/index.html" target="_blank" data-toggle="tooltip" title="Proyecto en equipo, ganador del Kackathon Laboratoria3G en la categoría 'Mejor desarrollo Web'.">
+                                        <img src="images/registrate.png" alt="imagen del proyecto titulado Biciando" class="imgproyec img-responsive">
+                                    </a>
+                                </div>
+                            </div>
+                        </div>  
+                        <div class="row mtop5">
+                            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                                 <div id="farolito" class="proyectos mtop3">
-                                    <a href="Farolito/index.html" data-toggle="tooltip" title="Abrir proyecto">
+                                    <a href="Farolito/index.html" target="_blank" data-toggle="tooltip" title="Abrir proyecto">
                                         <img src="images/farolito.png" alt="imagen del proyecto titulado Farolito" class="imgproyec img-responsive">
                                     </a>
                                 </div>
